src/index.css
@import "tailwindcss";

@theme {
  --font-ubuntu: "Ubuntu", "serif";

  /* Primary */

  --color-alabaster: hsl(231, 100%, 99%);
  --color-marine: hsl(213, 96%, 18%);
  --color-marine-light: hsl(214, 72%, 32%);
  --color-purple: hsl(243, 100%, 62%);
  --color-purple-dull: rgba(71, 61, 255, 0.6);
  --color-pastel: hsl(228, 100%, 84%);
  --color-light-blue: hsl(206, 94%, 87%);
  --color-strawberry: hsl(354, 84%, 57%);

  /* Neutral */

  --color-cool-gray: hsl(231, 11%, 63%);
  --color-light-gray: hsl(229, 24%, 87%);
  --color-magnolia: hsl(217, 100%, 97%);
  --color-white: hsl(0, 0%, 100%);
}

@layer components {
  /* utility border styling for development */
  .dev-border {
    @apply border-2 border-red-500 border-dashed;
  }

  .center-div {
    @apply flex justify-center items-center;
  }

  /* Centering divs with absolute positioning */
  .center-position-x {
    left: calc(50% - 1px);
    transform: translate(-50%, 0);
  }

  /*personal info placeholder text*/
  .placeholder-weight-bold::placeholder {
    font-size: 14.7px;
    font-weight: 700;
    opacity: 0.6;
  }

  /*personal info input field*/
  .personal-info-input {
    @apply w-full px-4 py-[13px] border rounded-md 
    text-sm font-bold text-marine focus:outline-none focus:ring-0 hover:border-purple-dull;
  }

  /*personal info input error states*/
  .input-error-state {
    @apply focus:ring-strawberry focus:border-strawberry border-strawberry;
  }
  .input-no-error-state {
    @apply focus:ring-purple focus:border-purple border-gray-300;
  }

  /*Selected subscription Plan style*/
  .subscription-select-style {
    @apply outline-none ring-1 ring-purple-100 border-purple bg-magnolia;
  }

  /*Hovered Subscription Plan style*/
  .subscription-hover-style {
    @apply outline-none ring-1 ring-purple-100 border-purple;
  }

  /*Desktop view margins*/
  .margin-clamp {
    margin-top: clamp(10px, calc((100vh - 600px) / 2), 200px);
    margin-bottom: clamp(10px, calc((100vh - 600px) / 2), 200px);
    margin-left: clamp(10px, calc((100vw - 940px) / 2), 700px);
    margin-right: clamp(10px, calc((100vw - 940px) / 2), 700px);
  }
}

@font-face {
  font-family: "Ubuntu";
  src: url("/assets/fonts/Ubuntu-Regular.ttf") format("truetype");
  font-weight: 400; /* Regular */
  font-style: normal;
}

@font-face {
  font-family: "Ubuntu";
  src: url("/assets/fonts/Ubuntu-Medium.ttf") format("truetype");
  font-weight: 500; /* Medium */
  font-style: normal;
}

@font-face {
  font-family: "Ubuntu";
  src: url("/assets/fonts/Ubuntu-Bold.ttf") format("truetype");
  font-weight: 700; /* Bold */
  font-style: normal;
}

